kustomize/fastapi/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fastapi
  labels:
    app: fastapi
  namespace : kustomize 
spec:
  selector:
    matchLabels:
      app: fastapi
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: fastapi
    spec:
      containers:
      - image: fastapi
        name: fastapi
        ports:
        - containerPort: 80
          name: fastapi
        volumeMounts:
        - name: fastapi-persistent-storage
          mountPath: /var/www/html
      volumes:
      - name: fastapi-persistent-storage
        emptyDir: {}
