kustomize/fastapi/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fastapi
  labels:
    app: fastapi
spec:
  ports:
    - port: 80
  selector:
    app: fastapi
  type: LoadBalancer
